# tool-dinov3-embeddings-api

./: PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py
app/services/: embeddings.py  image_io.py  model_manager.py
docker/: Dockerfile
docs/: api.md  integrations.md
k8s/: deployment.yaml  service.yaml
scripts/: load_test.py
tests/: test_embeddings.py  test_health.py
